...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <!-- スワイプハンドル -->
    <com.example.clothstock.ui.common.SwipeHandleView
        android:id="@+id/swipeHandle"
        android:layout_width="0dp"
        android:layout_height="@dimen/swipe_handle_height"
        android:layout_marginTop="@dimen/swipe_handle_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
